--- a/themes/stormbots/layouts/_default/single.html
+++ b/themes/stormbots/layouts/_default/single.html
@@ -1,6 +1,6 @@
 {{ partial "header.html" . }}
 
-<div class="header">
+<div class="header" from="default/single">
   <h1>{{ .Title }}</h1>
   <h2>{{ .Description }}</h2>
 </div>
