--- a/themes/stormbots/layouts/index.html
+++ b/themes/stormbots/layouts/index.html
@@ -5,7 +5,7 @@
   <h2>{{ .Site.Params.subtitle }}</h2>
 </div>
 
-<div class="content">
+<div class="content" from="index">
   {{ range .Paginator.Pages }}
     {{ if eq .Type "post" }}
       {{ .Render "summary"}}
