--- a/themes/stormbots/layouts/indexes/post.html
+++ b/themes/stormbots/layouts/indexes/post.html
@@ -1,10 +1,10 @@
 {{ partial "header.html" . }}
-
-<div class="header">
+<!--indexes/post.html-->
+<div class="header" from="indexes/post">
   <h1>{{ .Title }}</h1>
 </div>
-<div class="content">
-  {{ range .Data.Pages.GroupByDate "2006" }}
+<div class="content" from="indexes/post">
+  {{ range .Data.Pages }}
   <h2>{{ .Key }}</h2>
   <ul>
   {{ range .Pages }}
