--- a/themes/stormbots/layouts/post/single.html
+++ b/themes/stormbots/layouts/post/single.html
@@ -4,7 +4,7 @@
   <h1>{{ .Title }}</h1>
   <h2>{{ .Description }}</h2>
 </div>
-<div class="content">
+<div class="content" from="post/single">
 
   {{ partial "post_meta.html" . }}
 
