--- a/themes/stormbots/layouts/taxonomy/tag.html
+++ b/themes/stormbots/layouts/taxonomy/tag.html
@@ -1,10 +1,10 @@
 {{ partial "header.html" . }}
 
-<div class="header">
+<div class="header" from="taxonomy/tags">
   <h1>{{ .Title }}</h1>
 </div>
 
-<div class="content">
+<div class="content" from="taxonomy/tag">
   {{ range .Data.Pages }}
     {{ .Render "summary"}}
   {{ end }}
