--- a/themes/stormbots/layouts/taxonomy/topic.html
+++ b/themes/stormbots/layouts/taxonomy/topic.html
@@ -4,7 +4,7 @@
   <h1>{{ .Title }}</h1>
 </div>
 
-<div class="content">
+<div class="content" from="taxonomy/topic>
   {{ range .Data.Pages }}
     {{ .Render "summary"}}
   {{ end }}
