--- a/themes/stormbots/layouts/shortcodes/partner.html
+++ b/themes/stormbots/layouts/shortcodes/partner.html
@@ -1,6 +1,3 @@
-{{$key:=.Get 0}}
-{{range $name,$data := .Page.Site.Data.Partners.List }}
-{{ if or (eq $key $name) (eq $key $data.level) }}
-{{partial "partner.html" $data}}
-{{end}}
+{{range where .Page.Site.Data.Partners.List "id" "eq" (.Get 0) }}
+  {{partial "partner.html" .}}
 {{end}}
