Revert "Merge branch 'development' of github.com:stormbots/stormbots.github.io into feature/really-cool-gallery"
This reverts commit 6810d12f4299ff0ebaebfb417b66dd6f565a89f4, reversing
changes made to b58a3a079f4d8507b06a02f66257fc15fa337708.

--- a/themes/stormbots/layouts/index.html
+++ b/themes/stormbots/layouts/index.html
@@ -6,8 +6,10 @@
 </div>
 
 <div class="content" from="index">
-  {{ range .Data.Pages }}
+  {{ range .Paginator.Pages }}
+    {{ if eq .Type "post" }}
       {{ .Render "summary"}}
+    {{ end }}
   {{ end }}
 
   {{ partial "pagination.html" . }}
