Pushing to egg teric on

--- a/themes/hugo-initio-master/layouts/shortcodes/Game.html
+++ b/themes/hugo-initio-master/layouts/shortcodes/Game.html
@@ -3,7 +3,7 @@
   <td>
     <a href="/{{ replace (.Get 0) " " "_" }}"><img style="text-align: left" src="/images/games/first{{ .Get 0 }}.png"/> </td>
   <td>
-    <h1 style="text-align: center"> <font face="Pullman">
+    <h1 style="font-size: 40pt; text-align: center"> <font face="Pullman">
       First {{ .Get 0 | title }}: {{ .Get 1 }}
     </h1>
     <p style="text-align: center">
@@ -19,7 +19,7 @@
 
 <tr>
     <td>
-    <h1 style="text-align: center"> <font face="Pullman">
+    <h1 style="font-size: 40pt; text-align: center"> <font face="Pullman">
       First {{ .Get 0 | title }}: {{ .Get 1 }}
     </h1>
     <p style="text-align: center">
