--- a/themes/hugo-initio-master/layouts/shortcodes/partnerLevel.html
+++ b/themes/hugo-initio-master/layouts/shortcodes/partnerLevel.html
@@ -1,3 +1,3 @@
-{{range where .Page.Site.Data.Partners.List "level" "eq" (.Get 0) }}
-  {{partial "partner.html" .}}
-{{end}}
+{{ range (where .Site.Data.Partners.List "level" (.Get 0) ) }}
+{{ partial "partner" . }}
+{{ end }}
