--- a/themes/hugo-initio-master/static/css/styles.css
+++ b/themes/hugo-initio-master/static/css/styles.css
@@ -11,6 +11,11 @@ body {
 .topspace {
   margin-top: 40px;
 }
+
+@font-face {
+  font-family: "Pullman";
+  src: local("Pullman"), url("/fonts/Pullman.otf");
+}
 /*********************************************************************
 
 
@@ -66,48 +71,48 @@ body {
 }
 .navbar-default {
   background-color: #ffffff;
-  border-color: #05031c;
+  border-color: #0c0030;
 }
 .navbar-default .navbar-nav > li > a {
-  color: #05031c;
+  color: #0c0030;
 }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
-  color: #05031c;
+  color: #0c0030;
   background-color: #ffffff;
 }
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
-  color: #05031c;
+  color: #0c0030;
   background-color: #ffffff;
 }
 .navbar-default .dropdown ul.dropdown-menu > li > a {
-  color: #05031c;
+  color: #0c0030;
 }
 .navbar-default .dropdown ul.dropdown-menu > li > a:hover {
-  background-color: #05031c;
-  color: #05031c;
+  background-color: #0c0030;
+  color: #0c0030;
 }
 .navbar-default .navbar-toggle {
-  border-color: #05031c;
+  border-color: #0c0030;
 }
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
   background-color: #ffffff;
 }
 .navbar-default .navbar-toggle .icon-bar {
-  background-color: #05031c;
+  background-color: #0c0030;
 }
 .navbar-default .navbar-collapse,
 .navbar-default .navbar-form {
-  border-color: #05031c;
+  border-color: #0c0030;
 }
 .navbar-default .navbar-nav > .open > a,
 .navbar-default .navbar-nav > .open > a:hover,
 .navbar-default .navbar-nav > .open > a:focus {
   background-color: #ffffff;
-  color: #05031c;
+  color: #0c0030;
 }
 /****************************************************************************************
 
@@ -125,14 +130,14 @@ body {
 .nav-side > li > a {
   padding-top: 5px;
   padding-bottom: 5px;
-  color: #05031c;
+  color: #0c0030;
 }
 .nav-side > li > a:hover {
-  color: #05031c;
+  color: #0c0030;
   background: none;
 }
 .nav-side > li.active > a {
-  color: #05031c;
+  color: #0c0030;
 }
 /*********************************************************************
 
@@ -169,7 +174,7 @@ h6,
 .h6 {
   font-family: "Open sans", Helvetica, Arial, sans-serif;
   font-weight: 400;
-  color: #05031c;
+  color: #0c0030;
 }
 h1 {
   font-size: 40px;
@@ -192,10 +197,10 @@ h5 {
   font-size: 1.25rem;
 }
 a {
-  color: #05031c;
+  color: #0c0030;
 }
 a:hover {
-  color: #05031c;
+  color: #0c0030;
 }
 .lead {
   font-weight: 300;
@@ -204,7 +209,7 @@ a:hover {
 }
 .text-msg {
   line-height: 1.7em;
-  color: #05031c;
+  color: #0c0030;
   font-weight: 300;
   text-transform: capitalize;
   margin-top: -0.23em;
@@ -227,7 +232,7 @@ a:hover {
 #head {
   background: #f4f4f4 url(../images/bg_head.jpg) top center;
   background-size: cover;
-  color: #05031c;
+  color: #0c0030;
   padding: 30px 0 35px 0;
 }
 #head img.img-circle {
@@ -245,7 +250,7 @@ a:hover {
 }
 #head .title a {
   text-decoration: none;
-  color: #05031c;
+  color: #0c0030;
 }
 #head .tagline {
   display: block;
@@ -289,7 +294,7 @@ img {
   text-decoration: none;
   text-transform: uppercase;
   font-family: "Genericon", Helvetica, Arial, sans-serif;
-  color: #05031c;
+  color: #0c0030;
   -webkit-border-radius: 0px;
   -webkit-background-clip: padding-box;
   -moz-border-radius: 0px;
@@ -311,7 +316,7 @@ img {
 }
 .btn-primary {
   color: #fff;
-  background-color: #bd1550;
+  background-color: #0c0030;
 }
 .btn-primary:hover,
 .btn-primary:focus,
@@ -330,8 +335,8 @@ img {
 .btn-action:focus,
 .btn-action:active,
 .btn-action.active {
-  color: #bd1550;
-  border-color: #bd1550;
+  color: #0c0030;
+  border-color: #0c0030;
 }
 .btn-lg {
   padding: 15px 60px;
@@ -463,7 +468,7 @@ img {
   font-size: 0.75rem;
   text-transform: uppercase;
   text-shadow: 0 1px 0px #780d33;
-  background: #bd1550;
+  background: #0c0030;
   color: white;
 }
 .thumbnail img {
@@ -524,7 +529,7 @@ img {
 }
 .section-title a,
 .entry-title a {
-  color: #05031c;
+  color: #0c0030;
 }
 .section-title span,
 .entry-title span {
@@ -560,11 +565,11 @@ img {
   font-size: 1.125rem;
   font-style: italic;
   font-weight: normal;
-  color: #05031c;
+  color: #0c0030;
   margin: 0 0 15px 0;
 }
 .entry-header .entry-meta a {
-  color: #05031c;
+  color: #0c0030;
 }
 .entry-content {
   margin: 0 0 60px 0;
@@ -714,7 +719,7 @@ footer.entry-meta .meta-in {
   color: #333333;
 }
 #comments .comment-meta a:hover {
-  color: #bd1550;
+  color: #0c0030;
 }
 #comments .comment-meta .author {
   margin: 0 20px 0 0;
@@ -762,35 +767,35 @@ footer.entry-meta .meta-in {
 
 **********************************************************************/
 #footer {
-  background: #05031c;
+  background: #0c0030;
   padding: 30px 0 0 0;
   font-size: 12px;
-  color: #05031c;
+  color: #0c0030;
 }
 #footer a {
-  color: #05031c;
+  color: #0c0030;
 }
 #footer a:hover {
-  color: #05031c;
+  color: #0c0030;
 }
 #footer h3.widget-title {
   font-size: 15px;
   font-size: 0.9375rem;
   text-transform: uppercase;
-  color: #05031c;
+  color: #0c0030;
   margin: 0 0 20px;
 }
 #underfooter {
-  background: #05031c;
+  background: #0c0030;
   padding: 15px 0;
   color: #777;
   font-size: 12px;
 }
 #underfooter a {
-  color: #05031c;
+  color: #0c0030;
 }
 #underfooter a:hover {
-  color: #05031c;
+  color: #0c0030;
 }
 #underfooter p {
   margin: 0;
