--- a/themes/stormbots/static/css/side-menu.css
+++ b/themes/stormbots/static/css/side-menu.css
@@ -1,5 +1,5 @@
 body {
-    color: #05031c;
+    color: #030366;
 }
 
 .pure-img-responsive {
@@ -48,10 +48,10 @@ The content `<div>` is where all your content goes.
 
 .header {
      margin: 0;
-     color: #05031c;
+     color: #030366;
      text-align: center;
      padding: 2.5em 2em 0;
-     border-bottom: 1px solid #05031c;
+     border-bottom: 1px solid #030366;
  }
     .header h1 {
         margin: 0.2em 0;
@@ -60,7 +60,7 @@ The content `<div>` is where all your content goes.
     }
      .header h2 {
         font-weight: 300;
-        color: #05031c;
+        color: #030366;
         padding: 0;
         margin-top: 0;
     }
@@ -68,7 +68,7 @@ The content `<div>` is where all your content goes.
 .content-subhead {
     margin: 50px 0 20px 0;
     font-weight: 300;
-    color: #05031c;
+    color: #030366;
 }
 
 
@@ -86,7 +86,7 @@ appears on the left side of the page.
     left: 0;
     bottom: 0;
     z-index: 1000; /* so the menu or its navicon stays above all content */
-    background: #05031c;
+    background: #030366;
     overflow-y: auto;
     -webkit-overflow-scrolling: touch;
 }
@@ -120,7 +120,7 @@ appears on the left side of the page.
         */
         #menu .pure-menu li a:hover,
         #menu .pure-menu li a:focus {
-            background: #05031c;
+            background: #030366;
         }
 
     /*
@@ -128,7 +128,7 @@ appears on the left side of the page.
     */
     #menu .pure-menu-selected,
     #menu .pure-menu-heading {
-        background: #05031c;
+        background: #030366;
     }
         /*
         This styles a link within a selected menu item `<li>`.
@@ -162,7 +162,7 @@ small screens.
     display: block; /* show this only on small screens */
     top: 0;
     left: 0; /* "#menu width" */
-    background: #05031c;
+    background: #030366;
     background: rgba(0,0,0,0.7);
     font-size: 10px; /* change this value to increase/decrease button size */
     z-index: 10;
@@ -173,7 +173,7 @@ small screens.
 
     .menu-link:hover,
     .menu-link:focus {
-        background: #05031c;
+        background: #030366;
     }
 
     .menu-link span {
@@ -184,7 +184,7 @@ small screens.
     .menu-link span,
     .menu-link span:before,
     .menu-link span:after {
-        background-color: #05031c;
+        background-color: #030366;
         width: 100%;
         height: 0.2em;
     }
