--- a/themes/hugo-initio-master/layouts/partials/subheader.html
+++ b/themes/hugo-initio-master/layouts/partials/subheader.html
@@ -1,10 +1,17 @@
 <div class="row section topspace">
     <div class="col-md-12">
-        <p class="lead text-center text-muted">
-            <h1 font="Pullman" style="font-size: 40pt; text-align: center"> <font face="Pullman"> We Build More Than Robots</h1>
-            <h1 font="Pullman" style="font-size: 40pt; text-align: center"> <font face="Pullman"> We Build Futures </h1>
+        <div class="lead text-center text-muted">
+            <h1 class="pullman">We Build More Than Robots</h1>
+            <h1 class="pullman">We Build Futures</h1>
             <br />
-            <p style="font-size: 15pt; text-align: center"> This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement. .</p>
+            <h5>
+              This is our mission statement. This is our mission statement.
+              This is our mission statement. This is our mission statement.
+              This is our mission statement. This is our mission statement.
+              This is our mission statement. This is our mission statement.
+              This is our mission statement. This is our mission statement.
+              This is our mission statement.
+            </h5>
         </p>
     </div>
 </div> <!-- / section -->
