--- a/themes/hugo-initio-master/layouts/partials/recentworks.html
+++ b/themes/hugo-initio-master/layouts/partials/recentworks.html
@@ -1,6 +1,6 @@
 <div class="row section recentworks topspace">
 
-    <h2 class="section-title" style="font-size: 30pt"><span> <font face="Pullman">Recent Works</span></h2>
+    <h2 class="section-title pullman" style="font-size: 30pt">Recent Works</h2>
 
     <div class="thumbnails recentworks">
         {{ range $index, $area := .Site.Data.recentworks }}
