--- a/themes/hugo-initio-master/layouts/partials/services.html
+++ b/themes/hugo-initio-master/layouts/partials/services.html
@@ -1,6 +1,6 @@
 <div class="row section featured topspace">
 
-    <h2 class="section-title" style="font-size: 30pt"><span> <font face="Pullman">Services</span></h2>
+    <h2 class="section-title pullman" style="font-size: 30pt">Services</h2>
 
     <div class="">
         {{ range where .Data.Pages "Section" "service" }}
