--- a/themes/hugo-initio-master/layouts/shortcodes/Game.html
+++ b/themes/hugo-initio-master/layouts/shortcodes/Game.html
@@ -1,7 +1,7 @@
 {{ if eq (.Get 3) "left" }}
 <tr>
   <td>
-    <a href="/{{ replace (.Get 0) " " "_" }}"><img style="text-align: left" src="/images/games/first{{ .Get 0 }}.png"/> </td>
+    <a href="/{{ replace (.Get 0) " " "_" }}"><img style="text-align: left" src="/images/games/first{{ replace (.Get 0) " " "_" }}.png"/> </td>
   <td>
     <h1 style="font-size: 40pt; text-align: center"> <font face="Pullman">
       First {{ .Get 0 | title }}: {{ .Get 1 }}
@@ -29,6 +29,6 @@
     </p>
   </td>
   <td>
-    <a href="/{{ replace (.Get 0) " " "_" }}"><img style="text-align: left" src="/images/games/first{{ .Get 0 }}.png"/> </td>
+    <a href="/{{ replace (.Get 0) " " "_" }}"><img style="text-align: left" src="/images/games/first{{ replace (.Get 0) " " "_" }}.png"/> </td>
 </tr>
 {{ end }}
