--- a/themes/hugo-initio-master/layouts/shortcodes/partnerLevel.html
+++ b/themes/hugo-initio-master/layouts/shortcodes/partnerLevel.html
@@ -1,3 +1,5 @@
-{{ range (where .Site.Data.Partners.List "level" (.Get 0) ) }}
-{{ partial "partner" . }}
+{{ $logodir := .Site.Data.Partners.LogoDir }}
+
+{{ range $partner := (where .Site.Data.Partners.List "level" (.Get 0) ) }}
+{{ partial "partner" (dict "logodir" $logodir "partner" $partner) }}
 {{ end }}
