Pushing all changes for Terik

--- a/themes/hugo-initio-master/layouts/partials/subheader.html
+++ b/themes/hugo-initio-master/layouts/partials/subheader.html
@@ -4,6 +4,19 @@
             <h1 font="Pullman" style="font-size: 40pt; text-align: center"> <font face="Pullman">We Build More Than Robots</h1>
             <h1 font="Pullman" style="font-size: 40pt; text-align: center"> <font face="Pullman">We Build Futures </h1>
             <br />
-            <p style="font-size: 15pt; text-align: center"> This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement.</p>
+          <p style="font-size: 15pt; text-align: center"> This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement.</p>
+          <br />
+          <br />
+            <h3 font="Pullman" style="font-size: 25pt; text-align: center"> <font face="Pullman">MENTORS AND PARENTS ARE NEEDED FOR TEAM GROWTH AND SUCCESS</h3>
+          <br />
+          <p style="font-size: 15pt; text-align: center">  None of what we do would be possible without our mentors and parent volunteers. Mentors give the gifts of their time, life wisdom and professional experience all of which help us grow into mature,
+            responsible and caring adults ourselves. They all come from different career paths, not just engineering but they all bring the same thing: knowledge critical to our team's functioning and our growth
+            as individuals. They teach us to program. They show us how to build robots. They show us by their example how to plan, organize and lead a project. They give us help when we need it, but never
+            interfere or do things themselves. Without our mentors, this team wouldn't be able to work and do the things it does. We thank all of our mentors and parent volunteers for the amazing gifts they
+            share with us!
+          <br />
+            What?!?!? You're not an engineer? NO PROBLEM!! A FRC team needs many different types of assistance, not just technical stuff: we need mentors and parent volunteers who can help write a
+            business plan, design a web site, create a marketing campaign, and more! Please contact us at info@stormbots.com and visit the site for non-engineering mentors called NEMO</p>
+          </p>
     </div>
 </div> <!-- / section -->
