Added GearHead Font; Updated About Page

--- a/themes/hugo-initio-master/layouts/partials/subheader.html
+++ b/themes/hugo-initio-master/layouts/partials/subheader.html
@@ -7,9 +7,9 @@
           <p style="font-size: 15pt; text-align: center"> This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement.</p>
           <br />
           <br />
-            <h3 font="Pullman" style="font-size: 25pt; text-align: center"> <font face="Pullman">MENTORS AND PARENTS ARE NEEDED FOR TEAM GROWTH AND SUCCESS</h3>
+            <h3 font="Pullman" style="font-size: 30pt; text-align: center"> <font face="Pullman">MENTORS AND PARENTS ARE NEEDED FOR TEAM GROWTH AND SUCCESS</h3>
           <br />
-          <p style="font-size: 15pt; text-align: center">  None of what we do would be possible without our mentors and parent volunteers. Mentors give the gifts of their time, life wisdom and professional experience all of which help us grow into mature,
+          <p style="font-size: 12pt; text-align: center"> <font face="gearhead">  None of what we do would be possible without our mentors and parent volunteers. Mentors give the gifts of their time, life wisdom and professional experience all of which help us grow into mature,
             responsible and caring adults ourselves. They all come from different career paths, not just engineering but they all bring the same thing: knowledge critical to our team's functioning and our growth
             as individuals. They teach us to program. They show us how to build robots. They show us by their example how to plan, organize and lead a project. They give us help when we need it, but never
             interfere or do things themselves. Without our mentors, this team wouldn't be able to work and do the things it does. We thank all of our mentors and parent volunteers for the amazing gifts they
