--- a/themes/hugo-initio-master/layouts/partials/partner.html
+++ b/themes/hugo-initio-master/layouts/partials/partner.html
@@ -1,21 +1,30 @@
-
-
-<table>
-<tr>
-  <td>    
-    <a href="{{ .partner.url }}">
-      <img src="{{ .logodir }}/{{ .partner.logo }}" />
-    </a>
-  </td>
-  <td>
-    <a href="{{ .partner.url }}">
-      {{.partner.name}}
-    </a>
-  </td>
-  <td>
-    {{.partner.desc}}
-    <br/>
-    Sponsor for {{.partner.years }}
-  </td>
-</tr>
+<table border="0" width="100%" style="margin: 20px">
+  <thead>
+    <tr>
+      <th></th>
+      <th></th>
+    </tr>
+  </thead>
+<tbody>
+  <tr>
+    <td>
+      <a href="{{ .partner.url }}"><img style="text-align: left" src="{{ .logodir }}/{{ .partner.logo }}"/> </td>
+    <td>
+      <h1 style="font-size: 40pt; text-align: center"> <font face="Pullman"> <a href="{{ .partner.url }}" target="_blank">
+        {{.partner.name}}
+      </h1> </a>
+      <h1 style="font-size: 40pt; text-align: center"> <font face="Pullman"> <a href="{{ .partner.url }}" target="_blank">
+        {{.partner.location}}
+      </h1> </a>
+      <h1 style="font-size: 40pt; text-align: center"> <font face="Pullman"> <a href="{{ .partner.url }}" target="_blank">
+        {{.partner.from }}
+      </h1> </a>
+    </p>
+    </td>
+  </tr>
+</tbody>
 </table>
+
+</table>
+
+<p style="font-size: 15pt; text-align: center"> {{.partner.desc}} </p>
