Media image fixes

--- a/themes/hugo-initio-master/static/css/styles.css
+++ b/themes/hugo-initio-master/static/css/styles.css
@@ -586,6 +586,10 @@ img {
   padding-top: 20px;
   margin-bottom: 20px;
 }
+.entry-content img {
+  display: block;
+  margin: auto;
+}
 .meta-nav,
 .more-link {
   font-family: Georgia, serif;
