--- a/themes/hugo-initio-master/layouts/partials/header.html
+++ b/themes/hugo-initio-master/layouts/partials/header.html
@@ -33,7 +33,15 @@
 <header id="header">
 	<div id="head" class="parallax" parallax-speed="0">
 		<h1 id="logo" class="text-center">
+
+			<div id="header-desktop">
 			<img src="{{ .Site.BaseURL }}images/guy.png" alt="">
+			</div>
+
+			<!--<div id="header-mobile">
+			<img src="{{ .Site.BaseURL }}images/guy.png" width="150" alt="">
+		</div>-->
+
 			<span class="title">{{ .Site.Params.name }}</span>
 			<span class="tagline">{{ .Site.Params.description }}<br>
 				<a href="">{{ .Site.Params.email }}</a>
