--- a/themes/hugo-initio-master/static/css/styles.css
+++ b/themes/hugo-initio-master/static/css/styles.css
@@ -97,7 +97,7 @@ body {
 }
 .navbar-default .dropdown ul.dropdown-menu > li > a:hover {
   background-color: #0c0030;
-  color: #0c0030;
+  color: #ffffff;
 }
 .navbar-default .navbar-toggle {
   border-color: #0c0030;
@@ -591,12 +591,12 @@ img {
   font-family: Georgia, serif;
   font-style: italic;
   font-weight: bold;
-  color: #666666;
+  color: #0c0030;
   text-decoration: none;
 }
 .meta-nav:hover,
 .more-link:hover {
-  color: #333333;
+  color: #0c0030;
   text-decoration: underline;
 }
 .more-link {
@@ -775,19 +775,19 @@ footer.entry-meta .meta-in {
   background: #0c0030;
   padding: 30px 0 0 0;
   font-size: 12px;
-  color: #0c0030;
+  color: #ffffff;
 }
 #footer a {
-  color: #0c0030;
+  color: #ffffff;
 }
 #footer a:hover {
-  color: #0c0030;
+  color: #ffffff;
 }
 #footer h3.widget-title {
   font-size: 15px;
   font-size: 0.9375rem;
   text-transform: uppercase;
-  color: #0c0030;
+  color: #ffffff;
   margin: 0 0 20px;
 }
 #underfooter {
@@ -797,10 +797,10 @@ footer.entry-meta .meta-in {
   font-size: 12px;
 }
 #underfooter a {
-  color: #0c0030;
+  color: #777;
 }
 #underfooter a:hover {
-  color: #0c0030;
+  color: #777;
 }
 #underfooter p {
   margin: 0;
