Fixed Subteam Update Pages

--- a/themes/hugo-initio-master/layouts/_default/single.html
+++ b/themes/hugo-initio-master/layouts/_default/single.html
@@ -5,14 +5,14 @@
 	<div class="container">
 
 		<div class="row topspace">
-			<div class="col-sm-8 col-sm-offset-2">
+			<div class="col-sm-12 col-sm-offset-0">
 
  				<article class="post">
 					<header class="entry-header">
  						<div class="entry-meta">
  							<span class="posted-on"><time class="entry-date published" date="{{ .Date }}">{{ dateFormat .Site.Params.DateForm .Date }}</time></span>
  						</div>
- 						<h1 class="entry-title"><a href="{{ .Permalink }}" rel="bookmark">{{ .Title }}</a></h1>
+ 						<h1 class="entry-title">{{ .Title }}</h1>
 					</header>
 					<div class="entry-content">
 						{{ .Content }}
