--- a/themes/hugo-initio-master/layouts/about/single.html
+++ b/themes/hugo-initio-master/layouts/about/single.html
@@ -10,7 +10,7 @@
 			<aside class="col-sm-0 sidebar sidebar-right">
 
 				<div class="nav text-left nav-side">
-					<li class="active"><a href="#">{{ .Title }}</a></li>
+					<li class="active">{{ .Title }}</li>
 				</div>
 
 			</aside>
