--- a/themes/hugo-initio-master/static/css/styles.css
+++ b/themes/hugo-initio-master/static/css/styles.css
@@ -28,6 +28,11 @@ body {
 
 
 **********************************************************************/
+hr {
+border-bottom: 1px solid #0c0030;
+
+}
+
 .navbar {
   border-width: 1px 0;
   -webkit-border-radius: 0;
@@ -99,6 +104,7 @@ body {
   background-color: #0c0030;
   color: #ffffff;
 }
+
 .navbar-default .navbar-toggle {
   border-color: #0c0030;
 }
