Fixing Picture Reder Problems

--- a/themes/hugo-initio-master/layouts/_default/list.html
+++ b/themes/hugo-initio-master/layouts/_default/list.html
@@ -15,7 +15,7 @@
 						<h1 class="entry-title"><a href="{{ .Permalink }}" rel="bookmark">{{ .Title }}</a></h1>
 					</header>
 					<div class="entry-content">
-						{{ .Content }}
+						{{ .Render "summary"}}
 					</div>
 				</article>
 				<hr />
