Added Mission Statement, About, Game Descriptions, and some Subteam Photos

--- a/themes/hugo-initio-master/layouts/partials/subheader.html
+++ b/themes/hugo-initio-master/layouts/partials/subheader.html
@@ -4,8 +4,9 @@
             <h1 font="Pullman" style="font-size: 40pt; text-align: center"> <font face="Pullman">We Build More Than Robots</h1>
             <h1 font="Pullman" style="font-size: 40pt; text-align: center"> <font face="Pullman">We Build Futures </h1>
             <br />
-          <p style="font-size: 15pt; text-align: center"> <font face="Helvetica"> This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement. This is our mission statement.</p>
-          <br />
+          <p style="font-size: 15pt; text-align: center"> <font face="Helvetica">Through community outreach, partnerships, and recruitment our team 2811 inspires, transforms, and shapes the world around us into a place where innovation, technology, and the sciences are celebrated.  As a team we cultivate an environment for growth that extends beyond our team, aiming to engage, inspire, and educate both our team members and members of our community. Our motto, “We build more than robots we build futures,” motivates each student and mentor to strive for a personal best every day. This helps our members develop self-confidence, communication skills, as well as a passion for science and technology that will last throughout their lifetime.
+            <br />This is our vision, this is StormBots.</p>
+            <hr />
           <br />
             <h3 font="Pullman" style="font-size: 30pt; text-align: center"> <font face="Pullman">MENTORS AND PARENTS ARE NEEDED FOR TEAM GROWTH AND SUCCESS</h3>
           <br />
@@ -15,8 +16,8 @@
             interfere or do things themselves. Without our mentors, this team wouldn't be able to work and do the things it does. We thank all of our mentors and parent volunteers for the amazing gifts they
             share with us!
           <br />
-            What?!?!? You're not an engineer? NO PROBLEM!! A FRC team needs many different types of assistance, not just technical stuff: we need mentors and parent volunteers who can help write a
-            business plan, design a web site, create a marketing campaign, and more! Please contact us at info@stormbots.com and visit the site for non-engineering mentors called NEMO</p>
+            What?!?!? You're not an engineer? NO PROBLEM!! An FRC team needs many different types of assistance, not just technical stuff: we need mentors and parent volunteers who can help write a
+            business plan, design a web site, create a marketing campaign, and more! Please contact us at info@stormbots.com for more information.</p>
           </p>
     </div>
 </div> <!-- / section -->
