--- a/themes/hugo-initio-master/layouts/partials/header.html
+++ b/themes/hugo-initio-master/layouts/partials/header.html
@@ -26,6 +26,8 @@
     {{ else }}
         <script type="text/javascript" src="//platform-api.sharethis.com/js/sharethis.js#property={{ .Site.Params.sharethis.property }}&product=inline-share-buttons"></script>
     {{ end }}
+	
+	<script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
 </head>
 <body class="home">
