--- a/themes/hugo-initio-master/layouts/partials/footer.html
+++ b/themes/hugo-initio-master/layouts/partials/footer.html
@@ -88,5 +88,18 @@
 <script src="{{ .Site.BaseURL }}js/template.js"></script>
 <script id="dsq-count-scr" src="//{{ .Site.Params.disqus.site }}/count.js" async></script>
 {{ partial "analyticstracking.html" . }}
+
+<script>
+  if (window.netlifyIdentity) {
+    window.netlifyIdentity.on("init", user => {
+      if (!user) {
+        window.netlifyIdentity.on("login", () => {
+          document.location.href = "/admin/";
+        });
+      }
+    });
+  }
+</script>
+
 </body>
 </html>
